--- a/Geochatter/Layouts/BubbleFormViewController.xib
+++ b/Geochatter/Layouts/BubbleFormViewController.xib
@@ -7,14 +7,61 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BubbleFormViewController" customModule="Geochatter" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BubbleFormViewController" customModule="Geochatter" customModuleProvider="target">
+            <connections>
+                <outlet property="bubbleEntryTextField" destination="vK1-pD-Rkg" id="doH-Yr-5Fj"/>
+                <outlet property="headerText" destination="NKE-sx-ucJ" id="49B-ay-y8y"/>
+                <outlet property="postButton" destination="NaM-C8-cjP" id="QlH-rR-pZf"/>
+                <outlet property="view" destination="iN0-l3-epB" id="SVu-iB-tsJ"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-C8-cjP">
+                    <rect key="frame" x="126" y="704" width="163" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="163" id="GgL-lH-cYP"/>
+                        <constraint firstAttribute="height" constant="30" id="Q7C-hg-KZF"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="Post Thought"/>
+                </button>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
+                    <rect key="frame" x="20" y="295" width="374" height="212"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="212" id="Usz-JX-xqA"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Header" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NKE-sx-ucJ">
+                    <rect key="frame" x="0.0" y="44" width="414" height="72"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="72" id="ojO-Nl-okr"/>
+                    </constraints>
+                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="NaM-C8-cjP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="126" id="46Y-Mx-p9B"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="128" id="F8B-Xa-wfS"/>
+                <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="RHN-hc-phx"/>
+                <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="197" id="WfH-Al-XQw"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="125" id="Y6g-We-72U"/>
+                <constraint firstItem="NKE-sx-ucJ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="fXO-Xg-fAR"/>
+                <constraint firstItem="NKE-sx-ucJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ktn-TP-eEU"/>
+                <constraint firstItem="NKE-sx-ucJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lO9-m7-jZd"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vK1-pD-Rkg" secondAttribute="trailing" constant="20" id="qPR-4f-AON"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="139" y="88"/>
+            <point key="canvasLocation" x="137.68115942028987" y="87.723214285714278"/>
         </view>
     </objects>
 </document>
