--- a/Geochatter/Layouts/BubbleFormViewController.xib
+++ b/Geochatter/Layouts/BubbleFormViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BubbleFormViewController" customModule="Geochatter" customModuleProvider="target">
             <connections>
+                <outlet property="attachImageButton" destination="4qi-ee-cg3" id="Xg0-1t-cqw"/>
                 <outlet property="bubbleEntryTextField" destination="vK1-pD-Rkg" id="doH-Yr-5Fj"/>
                 <outlet property="headerText" destination="NKE-sx-ucJ" id="49B-ay-y8y"/>
                 <outlet property="postButton" destination="NaM-C8-cjP" id="QlH-rR-pZf"/>
@@ -21,16 +22,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-C8-cjP">
-                    <rect key="frame" x="126" y="704" width="163" height="30"/>
+                    <rect key="frame" x="211" y="792" width="163" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="163" id="GgL-lH-cYP"/>
-                        <constraint firstAttribute="height" constant="30" id="Q7C-hg-KZF"/>
+                        <constraint firstAttribute="height" constant="30" id="QQ2-IP-cc9"/>
+                        <constraint firstAttribute="width" constant="163" id="Uo1-Qe-sBw"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <state key="normal" title="Post Thought"/>
                 </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
-                    <rect key="frame" x="20" y="295" width="374" height="212"/>
+                    <rect key="frame" x="20" y="271" width="374" height="212"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="212" id="Usz-JX-xqA"/>
                     </constraints>
@@ -47,15 +48,26 @@
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qi-ee-cg3">
+                    <rect key="frame" x="162" y="508" width="91" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="3Ue-qY-8CR"/>
+                        <constraint firstAttribute="width" constant="91" id="Uxi-F6-gAp"/>
+                    </constraints>
+                    <state key="normal" title="Attach Image"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="NaM-C8-cjP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="126" id="46Y-Mx-p9B"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="128" id="F8B-Xa-wfS"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="4qi-ee-cg3" secondAttribute="trailing" constant="161" id="A2T-4O-LZv"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="40" id="ISh-N1-gfY"/>
+                <constraint firstItem="NaM-C8-cjP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="211" id="MZT-Gr-o0t"/>
+                <constraint firstItem="4qi-ee-cg3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="162" id="OLH-PP-Yko"/>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="RHN-hc-phx"/>
-                <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="197" id="WfH-Al-XQw"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="125" id="Y6g-We-72U"/>
+                <constraint firstItem="4qi-ee-cg3" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="25" id="e2i-pB-HLg"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="40" id="fR2-4h-Vx2"/>
                 <constraint firstItem="NKE-sx-ucJ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="fXO-Xg-fAR"/>
+                <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="309" id="fuA-zw-Nt5"/>
                 <constraint firstItem="NKE-sx-ucJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ktn-TP-eEU"/>
                 <constraint firstItem="NKE-sx-ucJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lO9-m7-jZd"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vK1-pD-Rkg" secondAttribute="trailing" constant="20" id="qPR-4f-AON"/>
