--- a/Geochatter/Layouts/BubbleFormViewController.xib
+++ b/Geochatter/Layouts/BubbleFormViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -49,26 +49,25 @@
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qi-ee-cg3">
-                    <rect key="frame" x="162" y="508" width="91" height="30"/>
+                    <rect key="frame" x="10" y="508" width="394" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="3Ue-qY-8CR"/>
-                        <constraint firstAttribute="width" constant="91" id="Uxi-F6-gAp"/>
                     </constraints>
                     <state key="normal" title="Attach Image"/>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="4qi-ee-cg3" secondAttribute="trailing" constant="161" id="A2T-4O-LZv"/>
+                <constraint firstItem="4qi-ee-cg3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="BOR-Ui-yN5"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="40" id="ISh-N1-gfY"/>
                 <constraint firstItem="NaM-C8-cjP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="211" id="MZT-Gr-o0t"/>
-                <constraint firstItem="4qi-ee-cg3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="162" id="OLH-PP-Yko"/>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="RHN-hc-phx"/>
                 <constraint firstItem="4qi-ee-cg3" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="25" id="e2i-pB-HLg"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="40" id="fR2-4h-Vx2"/>
                 <constraint firstItem="NKE-sx-ucJ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="fXO-Xg-fAR"/>
                 <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="309" id="fuA-zw-Nt5"/>
                 <constraint firstItem="NKE-sx-ucJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ktn-TP-eEU"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="4qi-ee-cg3" secondAttribute="trailing" constant="10" id="l9I-il-nJu"/>
                 <constraint firstItem="NKE-sx-ucJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lO9-m7-jZd"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vK1-pD-Rkg" secondAttribute="trailing" constant="20" id="qPR-4f-AON"/>
             </constraints>
