--- a/Geochatter/Layouts/MainViewController.xib
+++ b/Geochatter/Layouts/MainViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,6 +44,7 @@
             <constraints>
                 <constraint firstItem="qLv-0c-Q6M" firstAttribute="trailing" secondItem="oPq-eH-gYI" secondAttribute="trailing" id="5Wk-aq-cC2"/>
                 <constraint firstItem="gPR-YC-bAH" firstAttribute="top" secondItem="oPq-eH-gYI" secondAttribute="top" id="8ZW-J6-ZaJ"/>
+                <constraint firstItem="k1T-9e-Zp2" firstAttribute="top" secondItem="oPq-eH-gYI" secondAttribute="top" id="B91-1y-aHM"/>
                 <constraint firstItem="gPR-YC-bAH" firstAttribute="top" secondItem="oPq-eH-gYI" secondAttribute="top" id="NeE-nK-O4e"/>
                 <constraint firstItem="k1T-9e-Zp2" firstAttribute="trailing" secondItem="oPq-eH-gYI" secondAttribute="trailing" id="WHc-vt-TdA"/>
                 <constraint firstItem="qLv-0c-Q6M" firstAttribute="top" secondItem="gPR-YC-bAH" secondAttribute="bottom" id="YOm-AX-tnP"/>
