--- a/Geochatter/Layouts/BubbleFormViewController.xib
+++ b/Geochatter/Layouts/BubbleFormViewController.xib
@@ -11,7 +11,6 @@
             <connections>
                 <outlet property="attachImageButton" destination="4qi-ee-cg3" id="Xg0-1t-cqw"/>
                 <outlet property="bubbleEntryTextField" destination="vK1-pD-Rkg" id="doH-Yr-5Fj"/>
-                <outlet property="headerText" destination="NKE-sx-ucJ" id="49B-ay-y8y"/>
                 <outlet property="postButton" destination="NaM-C8-cjP" id="QlH-rR-pZf"/>
                 <outlet property="view" destination="iN0-l3-epB" id="SVu-iB-tsJ"/>
             </connections>
@@ -22,53 +21,38 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-C8-cjP">
-                    <rect key="frame" x="211" y="792" width="163" height="30"/>
+                    <rect key="frame" x="234" y="792" width="140" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="QQ2-IP-cc9"/>
-                        <constraint firstAttribute="width" constant="163" id="Uo1-Qe-sBw"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                     <state key="normal" title="Post Thought"/>
                 </button>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" borderStyle="roundedRect" placeholder="What would you like to say?" textAlignment="justified" adjustsFontSizeToFit="NO" minimumFontSize="20" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
                     <rect key="frame" x="20" y="271" width="374" height="212"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="212" id="Usz-JX-xqA"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" enablesReturnKeyAutomatically="YES"/>
                 </textField>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Header" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NKE-sx-ucJ" userLabel="Header">
-                    <rect key="frame" x="0.0" y="44" width="414" height="72"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="72" id="ojO-Nl-okr"/>
-                    </constraints>
-                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qi-ee-cg3">
-                    <rect key="frame" x="10" y="508" width="394" height="30"/>
+                    <rect key="frame" x="156" y="508" width="102" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="3Ue-qY-8CR"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <state key="normal" title="Attach Image"/>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="4qi-ee-cg3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="BOR-Ui-yN5"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="40" id="ISh-N1-gfY"/>
-                <constraint firstItem="NaM-C8-cjP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="211" id="MZT-Gr-o0t"/>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="RHN-hc-phx"/>
                 <constraint firstItem="4qi-ee-cg3" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="25" id="e2i-pB-HLg"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="40" id="fR2-4h-Vx2"/>
-                <constraint firstItem="NKE-sx-ucJ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="fXO-Xg-fAR"/>
                 <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="309" id="fuA-zw-Nt5"/>
-                <constraint firstItem="NKE-sx-ucJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ktn-TP-eEU"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="4qi-ee-cg3" secondAttribute="trailing" constant="10" id="l9I-il-nJu"/>
-                <constraint firstItem="NKE-sx-ucJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lO9-m7-jZd"/>
+                <constraint firstItem="4qi-ee-cg3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="gTB-pa-oxU"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vK1-pD-Rkg" secondAttribute="trailing" constant="20" id="qPR-4f-AON"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
