--- a/Geochatter/Layouts/LoginViewController.xib
+++ b/Geochatter/Layouts/LoginViewController.xib
@@ -7,14 +7,47 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="Geochatter" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="Geochatter" customModuleProvider="target">
+            <connections>
+                <outlet property="loginButton" destination="3pN-Jh-edm" id="M9Z-LP-Xrb"/>
+                <outlet property="signUpButton" destination="677-kM-sOC" id="36W-bf-L2y"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="677-kM-sOC">
+                    <rect key="frame" x="105" y="592" width="204" height="39"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="204" id="gRD-l8-1mX"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <state key="normal" title="Sign Up"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pN-Jh-edm">
+                    <rect key="frame" x="105" y="529" width="204" height="39"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="204" id="iIV-lR-HI5"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                    <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <state key="normal" title="Log In"/>
+                </button>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="677-kM-sOC" secondAttribute="bottom" constant="231" id="dRz-Fc-sjj"/>
+                <constraint firstItem="677-kM-sOC" firstAttribute="top" secondItem="3pN-Jh-edm" secondAttribute="bottom" constant="24" id="e1K-2d-nBd"/>
+                <constraint firstItem="677-kM-sOC" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="o61-WL-DtS"/>
+                <constraint firstItem="3pN-Jh-edm" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sYC-ap-x6v"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="139" y="90"/>
+            <point key="canvasLocation" x="-20.289855072463769" y="-113.16964285714285"/>
         </view>
     </objects>
 </document>
