--- a/Geochatter/Views/BubbleCell.xib
+++ b/Geochatter/Views/BubbleCell.xib
@@ -14,14 +14,14 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="14S-07-Xas" translatesAutoresizingMaskIntoConstraints="NO" id="2Zc-jE-2TA">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBN-D3-P9H">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBN-D3-P9H">
                         <rect key="frame" x="20" y="20" width="52" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="JNn-us-ya3"/>
                             <constraint firstAttribute="width" constant="52" id="m1w-Fr-8cZ"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="zcp-Gc-cx8"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
