--- a/Geochatter/Layouts/BubbleFormViewController.xib
+++ b/Geochatter/Layouts/BubbleFormViewController.xib
@@ -21,14 +21,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-C8-cjP">
-                    <rect key="frame" x="311" y="772" width="46" height="41"/>
-                    <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                    <state key="normal" title="Post">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                </button>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="top" placeholder="What would you like to say?" textAlignment="justified" adjustsFontSizeToFit="NO" minimumFontSize="20" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vK1-pD-Rkg">
                     <rect key="frame" x="0.0" y="96" width="414" height="300"/>
                     <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -47,26 +39,31 @@
                     <state key="normal" title="Attach Image"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSP-DV-OVE">
-                    <rect key="frame" x="338" y="54" width="56" height="34"/>
+                    <rect key="frame" x="20" y="54" width="56" height="34"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="IZ0-l4-aI5"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="Cancel"/>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NaM-C8-cjP">
+                    <rect key="frame" x="358" y="54" width="36" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <state key="normal" title="Post"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="top" secondItem="ZSP-DV-OVE" secondAttribute="bottom" constant="8" id="129-Tr-y3Q"/>
-                <constraint firstItem="ZSP-DV-OVE" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="31Q-wx-nsl"/>
                 <constraint firstItem="4qi-ee-cg3" firstAttribute="top" secondItem="vK1-pD-Rkg" secondAttribute="bottom" constant="8" id="3zV-K3-Psa"/>
+                <constraint firstItem="NaM-C8-cjP" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="5ob-3G-bzu"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="20" id="C1f-vK-Mkt"/>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="DH2-yz-e6K"/>
+                <constraint firstItem="ZSP-DV-OVE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="FQs-Tm-Yx9"/>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Fmk-8d-YCC"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ZSP-DV-OVE" secondAttribute="trailing" constant="20" id="HPn-go-Rlz"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="NaM-C8-cjP" secondAttribute="trailing" constant="57" id="WCe-ud-ISj"/>
                 <constraint firstItem="4qi-ee-cg3" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="aFV-Lv-2Sg"/>
                 <constraint firstItem="vK1-pD-Rkg" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="52" id="e8R-WV-feB"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="NaM-C8-cjP" secondAttribute="bottom" constant="49" id="k85-6J-bfj"/>
+                <constraint firstItem="ZSP-DV-OVE" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="eHh-RW-1f4"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="137.68115942028987" y="87.723214285714278"/>
